--- a/painters.html
+++ b/painters.html
@@ -4,9 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>TypeScript HTML App</title>
-    <link rel="stylesheet" href="app.css" type="text/css" />
     <link href="styles/app.css" rel="stylesheet" />
-    <script src="app.js"></script>
 </head>
 <body>
     <div class="row">
@@ -18,7 +16,7 @@
         </div>
     </div>
 
-
     <div id="content"></div>
+    <script src="bundle.js"></script>
 </body>
 </html>
